--- a/src/index.css
+++ b/src/index.css
@@ -178,3 +178,22 @@
     transform: scale(1);
   }
 }
+/* Hide scrollbars (keep scrolling enabled) */
+html,
+body {
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none; /* Firefox */
+}
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
